test_suite/tests/ui/with-variant/skip_ser_struct_field.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
enum Enum {
    #[serde(serialize_with = "serialize_some_other_variant")]
    Struct {
        #[serde(skip_serializing)]
        f1: String,
        f2: u8,
    },
}

fn main() {}
